--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-hacker
 title: "Portafolio de Ciberseguridad"
 description: "Pentesting | QA | Scripts | CTFs"
+show_downloads: true
+google_analytics:
