--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-hacker
 title: "Portafolio de Ciberseguridad"
 description: "Pentesting | QA | Scripts | CTFs"
-show_downloads: true
+show_downloads: false
 google_analytics:
